src/test/deca/context/invalid/test_error_3.62-2.deca
// Description:
//    Programme soulevant l'erreur (3.62)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Le type 'null' est incompatible avec l'opérateur unaire '-' (règle 3.62)
//
// Historique:
//    cree le 14/01/2022

{
	int var;
    var = -null;
}
